# github_scraper

./: .env  README.md  main.py  pyproject.toml
data/: input_data.json  output_data.json
